--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -18,36 +18,22 @@
 
 - name: Setup user shell
   user:
-    name: '{{ lookup("env", "USER") }}'
+    name: '{{ ansible_env.USER }}'
     shell: '{{ fish_path.stdout }}'
-    system: yes
   become: yes
-
-- name: Obtain path to fish
-  shell: which fish
-  register: fish_path
-  changed_when: false
-  check_mode: no
-
-- name: Set ansible_shell_executable to fish
-  set_fact:
-    ansible_shell_executable: '{{ fish_path.stdout }}'
-    ansible_shell_type: fish
 
 - name: Create fish config dir
   file:
-    path: ~/.config/fish
+    path: "{{ item }}"
     state: directory
-
-- name: Create functions dir
-  file:
-    path: ~/.config/fish/functions
-    state: directory
+  loop:
+    - "{{ fish_config_dir }}"
+    - "{{ fish_config_dir }}/functions"
 
 - name: Install fisherman
   get_url:
     url: https://git.io/fisher
-    dest: ~/.config/fish/functions/fisher.fish
+    dest: "{{ fish_config_dir }}/functions/fisher.fish"
   register: download_result
   until: download_result is succeeded
   retries: 3
@@ -56,12 +42,13 @@
 - name: Put config files
   file:
     src: '{{ dotfiles_repo }}/{{ item }}'
-    dest: ~/{{ item }}
+    dest: '{{ ansible_env.HOME }}/{{ item }}'
     state: link
     force: yes
-  with_items:
-    - '{{ fish_config_files }}'
+  loop: '{{ fish_config_files }}'
 
 - name: Install fish plugins
   shell: fisher
+  args:
+    executable: "{{ fish_path.stdout }} -lc"
   changed_when: false
