--- a/roles/brew/tasks/main.yml
+++ b/roles/brew/tasks/main.yml
@@ -1,6 +1,7 @@
 - block:
   - name: brew update
-    homebrew: update_homebrew=yes
+    homebrew:
+      update_homebrew: yes
 
   tags: brew_update
 
@@ -16,11 +17,6 @@
     homebrew:
       name={{ item.name }}
       state={{ item.state | default('installed') }}
-      install_options={{
-        item.install_options | default('latest') | join(',')
-        if item.install_options is not string
-        else item.install_options
-      }}
     with_items:
       - '{{ homebrew_packages }}'
 
