--- a/roles/fish/defaults/main.yml
+++ b/roles/fish/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-fish_config_dir: "{{ ansible_env.XDG_CONFIG_HOME | defaults(ansible_env.HOME + '/.config') }}/fish"
+fish_config_dir: "{{ ansible_env.XDG_CONFIG_HOME | default(ansible_env.HOME + '/.config') }}/fish"
 fish_config_files:
   - .config/fish/config.fish
   - .config/fish/fishfile
