--- a/roles/pddg.pyenv/tasks/darwin_install_version.yml
+++ b/roles/pddg.pyenv/tasks/darwin_install_version.yml
@@ -10,18 +10,17 @@
   - name: "{{ item }}: Install python interpreters"
     shell: "pyenv install {{ item }}"
     args:
-      creates: '{{ pyenv_install_dir }}/versions/{{ item }}'
+      creates: "{{ pyenv_install_dir }}/versions/{{ item }}"
     environment:
       PATH: "{{ pyenv_install_dir }}/bin:{{ ansible_env.PATH }}"
       PYENV_ROOT: "{{ pyenv_install_dir }}"
-      PYTHON_CONFIGURE_OPTS: '{{ item.option }}'
-      CFLAGS: '-I{{ openssl_prefix.stdout }}/include'
-      LDFLAGS: '-L{{ openssl_prefix.stdout }}/lib'
+      PYTHON_CONFIGURE_OPTS: "{{ item.option | default(omit) }}"
+      CFLAGS: "-I{{ openssl_prefix.stdout }}/include"
+      LDFLAGS: "-L{{ openssl_prefix.stdout }}/lib"
     notify:
       - Pyenv rehash
-
   rescue:
     - name: "{{ item }}: Delete failed version directory"
       file:
         state: absent
-        path: '{{ pyenv_install_dir }}/versions/{{ item }}'
+        path: "{{ pyenv_install_dir }}/versions/{{ item }}"
