--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -29,21 +29,11 @@
   tags: apt_add
 
 - block:
-  - name: Apt update
-    apt:
-      update_cache: yes
-    become: yes
-
-  - name: Apt upgrade
-    apt:
-      upgrade: safe
-    become: yes
 
   - name: Install packages
     apt:
-      name: '{{ item }}'
-    with_items:
-      - '{{ apt_packages }}'
+      name: '{{ apt_packages }}'
+      cache_valid_time: 3600
     become: yes
 
   - name: Apt clean
@@ -57,4 +47,3 @@
     become: yes
 
   tags: apt_install
-
