--- a/roles/apt/vars/main.yml
+++ b/roles/apt/vars/main.yml
@@ -1,21 +1,11 @@
 apt_packages:
   - git
-  - python
   - python3
-  - python-pip
   - python3-pip
-  - golang
   - gcc
   - g++
+  - curl
   - wget
   - make
   - cmake
   - openssl
-  - libssl-dev
-  - libbz2-dev
-  - libreadline-dev
-  - libsqlite3-dev
-  - zlib1g-dev
-  - libboost-all-dev
-  - libicu-dev
-  - evince
