--- a/playbooks/tools.yml
+++ b/playbooks/tools.yml
@@ -5,8 +5,10 @@
     - name: fish
       tags: fish
 
-    - name: ghq
+    - name: pddg.ghq
       tags: ghq
+      vars:
+        ghq_version: 1.1.7
 
     - name: pddg.anyenv
       tags: anyenv
