--- a/roles/pddg.pyenv/tasks/darwin_dependencies.yml
+++ b/roles/pddg.pyenv/tasks/darwin_dependencies.yml
@@ -1,7 +1,7 @@
 ---
 # Refs: https://github.com/pyenv/pyenv/wiki#suggested-build-environment
 - name: Install dependencies (darwin)
-  brew:
+  homebrew:
     name:
       - openssl
       - readline
